--- a/dashboard.css
+++ b/dashboard.css
@@ -98,3 +98,7 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
+
+
+#chart-category svg g g.axis.x { display: none; }
